<resources>
    <string name="app_name">RestaurantFastFood_Clientes</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="contraseña">Contraseña</string>
    <string name="descripcion">Descripcion</string>
    <string name="registrate">¿No tienes cuenta? Registrate.</string>
    <string name="olvidaste_tu_contraseña">¿Olvidaste tu contraseña?</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta? Inicia Sesión</string>
    <string name="slogan_login">La solución más deliciosa</string>

    <string name="txt_llenar_campos_login">Llena todos los datos</string>
    <string name="txt_datos_erroneos_login">Datos erróneos</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="documento_de_identidad">Documento de Identidad</string>
    <string name="inicio">Inicio</string>
    <string name="confirme_la_contraseña">Confirme la contraseña</string>
    <string name="caracteres_minimos">La contraseña debe tener mínimo 8 caracteres</string>
    <string name="ingresa_tu_correo">Ingresa tu correo</string>
    <string name="recupera_tu_contraseña">Recupera tu contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Inicio</string>
    <string name="orders">Mi Pedido</string>
    <string name="history">Historial</string>
    <string name="profile">Perfil</string>
    <string name="puntaje">Puntaje</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <string name="ingresa_tus_datos">Ingresa tus datos</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="precio">Precio:</string>
    <string name="cantidad">Cantidad:</string>
</resources>